[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textchart"
version = "0.0.2"
authors = [
  { name="David Stein", email="textchart@stein.fyi" },
]
description = "A simple text-only chart generator"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/davidbstein/textchart"
"Bug Tracker" = "https://github.com/davidbstein/textchart/issues"